--- a/deployment-service.yaml
+++ b/deployment-service.yaml
@@ -33,5 +33,5 @@ spec:
     - protocol: "TCP"
       port: 80
       targetPort: 8080
-      nodePort: 30080   # ✅ ADDED: Optional but recommended for fixed access port
-  type: NodePort         # ✅ CHANGED: LoadBalancer ➝ NodePort
+      nodePort: 30080   
+  type: NodePort         
